--- a/style.css
+++ b/style.css
@@ -26,10 +26,14 @@
 }
 
 .btn{
-    border-radius: 5px;
+    width: 90%;
     height: 40px;
-    width: 50%;
-    margin: 5px;
-    justify-self: center;
-    align-self: center;
+    border-radius: 10px;
+    margin: 10px;
+    padding: 5px;
+    border: none;
+    font-family: 'Times New Roman', Times, serif';
+    font-size: 20px;
+    margin-left: 20px;
+
 }
